--- a/css/custom.css
+++ b/css/custom.css
@@ -107,6 +107,11 @@ h1 {
 	padding:20px;
 }
 
+.headertext {
+    font-family: 'Merriweather', serif;
+    font-size: 70px;
+	padding:20px;
+}
 
 
 
