--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 html {
   scroll-behavior: smooth;
-height:100%
+height:100%;
 }
  
 body{
@@ -88,13 +88,11 @@ body{
 
 }
 
-
 .icon {
 	padding: 15px 5px 0px 5px; 
 	
 	font-size:20px;
 }
-
 
 
 #aboutme{
@@ -107,12 +105,12 @@ h1 {
 	padding:20px;
 }
 
+
 .headertext {
     font-family: 'Merriweather', serif;
     font-size: 70px;
 	padding:20px;
 }
-
 
 
 h2 {
@@ -279,7 +277,6 @@ li {
 
 
 
-
 .img-fluid2 {
 	height:500px;
 }
@@ -325,4 +322,6 @@ header .overlay {
     background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
   }
 	
+	
+
 	
