--- a/css/custom.css
+++ b/css/custom.css
@@ -60,7 +60,7 @@ body{
 
 .parallax3 { 
   /* The image used */
-  background-image: url(/images/lathed.jpg);
+  background-image: url(images/lathed.jpg);
 	opacity:80%;
   /* Set a specific height */
   height: 100%; 
