--- a/css/custom.css
+++ b/css/custom.css
@@ -30,7 +30,7 @@ body{
 }
 .parallax { 
   /* The image used */
-  background-image: url(/images/snowman_preview.jpg);
+  background-image: url(../images/snowman_preview.jpg);
 	opacity:50%;
   /* Set a specific height */
   height: 100%; 
@@ -45,7 +45,7 @@ body{
 
 .parallax2 { 
   /* The image used */
-  background-image: url(/images/mudbox_preview.jpg);
+  background-image: url(../images/mudbox_preview.jpg);
 	opacity:80%;
   /* Set a specific height */
   height: 100%; 
@@ -60,7 +60,7 @@ body{
 
 .parallax3 { 
   /* The image used */
-  background-image: url(images/lathed.jpg);
+  background-image: url(../images/lathed.jpg);
 	opacity:80%;
   /* Set a specific height */
   height: 100%; 
@@ -75,7 +75,7 @@ body{
 
 .parallax4 { 
   /* The image used */
-  background-image: url(/images/spaceman.png);
+  background-image: url(../images/spaceman.png);
 	opacity:80%;
   /* Set a specific height */
   height: 100%; 
