--- a/css/custom.css
+++ b/css/custom.css
@@ -273,7 +273,12 @@ video::-webkit-media-controls {
 
 #serviceslist{
 	list-style: none;
-	font-size:20px;
+	font-size:15px;
+}
+
+#programslist{
+	list-style: none;
+	font-size:10px;
 }
 
 li {
