--- a/css/custom.css
+++ b/css/custom.css
@@ -118,6 +118,13 @@ h2 {
 	font-size: 28px;
 	margin-top:40px;
 }
+
+
+#text1 {
+    font-family: 'Merriweather', sans-serif;
+	font-size: 18px;
+	margin-top:40px;
+}
 h3 {
     font-family: 'Merriweather', sans-serif;
 	font-size: 22px;
