--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,11 @@ body{
 		height:100;
 }
 
+
+.fab fa-linkedin, .fab fa-facebook, .fab fa-instagram {
+	color:#ffffff;
+}
+
 #topbar{
     background-color: #bccec0;
 }
