--- a/css/custom.css
+++ b/css/custom.css
@@ -410,7 +410,7 @@ header .overlay {
 
 @media (pointer: coarse) and (hover: none) {
   header {
-    background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
+    background: url('') black no-repeat center center scroll;
   }
 	
 	
